# publicatiedatumcontrole

./: .gitignore  README.md  pyproject.toml  requirements.txt
publicatiedatumcontrole/: cli.py  compare.py  config.yaml  extract.py  getfiles.py  report.py  runner.py  scores.py  utils.py
